# rustracer

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Cargo.toml  README.md  log  run.sh
src/: canvas.rs  common.rs  gui.rs  main.rs  objects.rs  primitives.rs  raytracer.rs
src/scene/: .#geo.rs  geo.rs  mod.rs  objects.rs
