[package]
name = "rustracer"
version = "0.1.0"
authors = ["Stephen Jayakar <aj12ay@gmail.com>"]
edition = "2018"

[features]
gui = ["sdl2"]

[dependencies]
bvh = "0.3.2"
clap = "2.33.3"
crossbeam-channel = "0.5.0"
fastrand = "1.4.0"
nalgebra = "0.23.2"
tobj = "2.0.3"
png = "0.16.8"
rayon = "1.5.0"
# Optional dependencies
sdl2 = { version = "0.36.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies.sdl2]
version = "0.36.0"
features = ["bundled"]
